--- a/_posts/2016-09-30-dada.md
+++ b/_posts/2016-09-30-dada.md
@@ -5,6 +5,5 @@ published: true
 title: dada
 feature: child.jpg
 ---
+![0e011f8e-4d2d-40b6d0-8770-34967e29e06c.jpg]({{site.baseurl}}/assets/images/posts/0e011f8e-4d2d-40b6d0-8770-34967e29e06c.jpg)
 ![child.jpg]({{site.baseurl}}/assets/images/posts/child.jpg)
-
-
