--- a/_posts/2016-09-30-test.md
+++ b/_posts/2016-09-30-test.md
@@ -4,5 +4,6 @@ date: CURRENT_DATE
 published: true
 title: test
 feature: child.jpg
+data: CURRENT_DATETIME
 ---
 ![child.jpg]({{site.baseurl}}/assets/images/posts/child.jpg)
