--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -3,3 +3,23 @@ layout: post
 published: true
 title: art
 ---
+![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
+![]({{site.baseurl}}/assets/images/posts/avh%C3%A5llsamhet.jpg)![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
+![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
+![coulor.jpg]({{site.baseurl}}/assets/images/posts/coulor.jpg)
+![demon.jpg]({{site.baseurl}}/assets/images/posts/demon.jpg)
+![farewell2.jpg]({{site.baseurl}}/assets/images/posts/farewell2.jpg)
+![fever.jpg]({{site.baseurl}}/assets/images/posts/fever.jpg)
+![fjäril.jpg]({{site.baseurl}}/assets/images/posts/fjäril.jpg)
+![fot.jpg]({{site.baseurl}}/assets/images/posts/fot.jpg)
+![]({{site.baseurl}}/assets/images/posts/gamla%20tr%C3%A4d.jpg)![god.jpg]({{site.baseurl}}/assets/images/posts/god.jpg)
+![hands in wind.jpg]({{site.baseurl}}/assets/images/posts/hands in wind.jpg)
+![homo.jpg]({{site.baseurl}}/assets/images/posts/homo.jpg)
+![love.jpg]({{site.baseurl}}/assets/images/posts/love.jpg)
+![mammas pojke2.jpg]({{site.baseurl}}/assets/images/posts/mammas pojke2.jpg)
+![robert.jpg]({{site.baseurl}}/assets/images/posts/robert.jpg)
+![roger.jpg]({{site.baseurl}}/assets/images/posts/roger.jpg)
+![storebror.jpg]({{site.baseurl}}/assets/images/posts/storebror.jpg)
+![]({{site.baseurl}}/assets/images/posts/soldier%20red.jpg)![]({{site.baseurl}}/assets/images/posts/t%20bana.jpg)![zombie.jpg]({{site.baseurl}}/assets/images/posts/zombie.jpg)
+![twintower.jpg]({{site.baseurl}}/assets/images/posts/twintower.jpg)
+![twintower.jpg]({{site.baseurl}}/assets/images/posts/twintower.jpg)
