--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -3,6 +3,7 @@ layout: post
 published: true
 title: art
 ---
+![virvel.jpg]({{site.baseurl}}/assets/images/posts/virvel.jpg)
 ![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
 ![]({{site.baseurl}}/assets/images/posts/avh%C3%A5llsamhet.jpg)![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
 ![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
