--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -2,6 +2,7 @@
 layout: post
 published: true
 title: royal
+feature: calle.jpg
 ---
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
 ![dalahäst.jpg]({{site.baseurl}}/assets/images/posts/dalahäst.jpg)
@@ -9,4 +10,3 @@ title: royal
 ![joker.jpg]({{site.baseurl}}/assets/images/posts/joker.jpg)
 ![royalcirkus.jpg]({{site.baseurl}}/assets/images/posts/royalcirkus.jpg)
 ![philip.jpg]({{site.baseurl}}/assets/images/posts/philip.jpg)
-
