--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -2,6 +2,7 @@
 layout: post
 published: true
 title: politik
+feature: uk ut ur eu.jpg
 ---
 ![uk ut ur eu.jpg]({{site.baseurl}}/assets/images/posts/uk ut ur eu.jpg)
 ![israel.jpg]({{site.baseurl}}/assets/images/posts/israel.jpg)
