--- a/_posts/2016-10-04-jessica.md
+++ b/_posts/2016-10-04-jessica.md
@@ -2,6 +2,7 @@
 layout: post
 published: true
 title: jessica
+feature: shoe.jpg
 ---
 ![jessicaface.jpg]({{site.baseurl}}/assets/images/posts/jessicaface.jpg)
 ![IMG_2969.JPG]({{site.baseurl}}/assets/images/posts/IMG_2969.JPG)
@@ -11,7 +12,8 @@ title: jessica
 ![Doc8887k.jpg]({{site.baseurl}}/assets/images/posts/Doc8887k.jpg)
 ![fan 453501.jpg]({{site.baseurl}}/assets/images/posts/fan 453501.jpg)
 ![01Madrid-5-735x488.jpg]({{site.baseurl}}/assets/images/posts/01Madrid-5-735x488.jpg)
-![]({{site.baseurl}}/assets/images/posts/frimur06.jpg)![]({{site.baseurl}}/)![Still Life 7Am88ph8or3a vandeweghe .jpg]({{site.baseurl}}/assets/images/posts/Still Life 7Am88ph8or3a vandeweghe .jpg)
+![frimur06.jpg]({{site.baseurl}}/assets/images/posts/frimur06.jpg)
+![Still Life 7Am88ph8or3a vandeweghe .jpg]({{site.baseurl}}/assets/images/posts/Still Life 7Am88ph8or3a vandeweghe .jpg)
 ![frimur06.jpg]({{site.baseurl}}/assets/images/posts/frimur06.jpg)
 ![tunnel.jpg]({{site.baseurl}}/assets/images/posts/tunnel.jpg)
 ![Copy (5) of NewYork_EmpireState_skyskrapa.jpg]({{site.baseurl}}/assets/images/posts/Copy (5) of NewYork_EmpireState_skyskrapa.jpg)
