--- a/_posts/2016-10-04-dada.md
+++ b/_posts/2016-10-04-dada.md
@@ -2,7 +2,7 @@
 layout: post
 published: true
 title: dada
-feature: city_ruins_street_hd-wallpaper-247444.jpg
+feature: jas.jpg
 ---
 ![öresundsbron.jpg]({{site.baseurl}}/assets/images/posts/öresundsbron.jpg)
 ![sopsemester.jpg]({{site.baseurl}}/assets/images/posts/sopsemester.jpg)
@@ -22,4 +22,3 @@ feature: city_ruins_street_hd-wallpaper-247444.jpg
 ![child v.jpg]({{site.baseurl}}/assets/images/posts/child v.jpg)
 ![arabhandel.jpg]({{site.baseurl}}/assets/images/posts/arabhandel.jpg)
 ![city_ruins_street_hd-wallpaper-247444.jpg]({{site.baseurl}}/assets/images/posts/city_ruins_street_hd-wallpaper-247444.jpg)
-
