--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -2,6 +2,7 @@
 layout: post
 published: true
 title: art
+feature: bored.jpg
 ---
 ![virvel.jpg]({{site.baseurl}}/assets/images/posts/virvel.jpg)
 ![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
