--- a/_posts/2016-10-04--ngest.md
+++ b/_posts/2016-10-04--ngest.md
@@ -2,6 +2,7 @@
 layout: post
 published: true
 title: ångest
+feature: farewell.jpg
 ---
 ![farewell.jpg]({{site.baseurl}}/assets/images/posts/farewell.jpg)
 ![ångrar.jpg]({{site.baseurl}}/assets/images/posts/ångrar.jpg)
