--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: art
 feature: bored.jpg
 ---
+![20 FACE.jpg]({{site.baseurl}}/assets/images/posts/20 FACE.jpg)
 ![virvel.jpg]({{site.baseurl}}/assets/images/posts/virvel.jpg)
 ![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
 ![]({{site.baseurl}}/assets/images/posts/avh%C3%A5llsamhet.jpg)![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
