--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -4,6 +4,7 @@ published: true
 title: politik
 feature: uk ut ur eu.jpg
 ---
+![Swedish2_0.jpg]({{site.baseurl}}/assets/images/posts/Swedish2_0.jpg)
 ![26a.jpg]({{site.baseurl}}/assets/images/posts/26a.jpg)
 ![uk ut ur eu.jpg]({{site.baseurl}}/assets/images/posts/uk ut ur eu.jpg)
 ![israel.jpg]({{site.baseurl}}/assets/images/posts/israel.jpg)
