--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -5,6 +5,7 @@ title: politik
 feature: uk ut ur eu.jpg
 ---
 ![Swedish2_0.jpg]({{site.baseurl}}/assets/images/posts/Swedish2_0.jpg)
+![Copy (2) 77graffiti-1.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 77graffiti-1.jpg)
 ![26a.jpg]({{site.baseurl}}/assets/images/posts/26a.jpg)
 ![uk ut ur eu.jpg]({{site.baseurl}}/assets/images/posts/uk ut ur eu.jpg)
 ![israel.jpg]({{site.baseurl}}/assets/images/posts/israel.jpg)
