--- a/_posts/2016-10-04--ngest.md
+++ b/_posts/2016-10-04--ngest.md
@@ -4,6 +4,7 @@ published: true
 title: ångest
 feature: farewell.jpg
 ---
+![grön ångesr.jpg]({{site.baseurl}}/assets/images/posts/grön ångesr.jpg)
 ![farewell.jpg]({{site.baseurl}}/assets/images/posts/farewell.jpg)
 ![ångrar.jpg]({{site.baseurl}}/assets/images/posts/ångrar.jpg)
 ![]({{site.baseurl}}/assets/images/posts/happy.jpg)![gud som....jpg]({{site.baseurl}}/assets/images/posts/gud som....jpg)
