--- a/_posts/2016-10-04-dada.md
+++ b/_posts/2016-10-04-dada.md
@@ -5,6 +5,7 @@ title: dada
 feature: jas.jpg
 ---
 ![nastol.jpg]({{site.baseurl}}/assets/images/posts/nastol.jpg)
+![showFoto.jpg]({{site.baseurl}}/assets/images/posts/showFoto.jpg)
 ![öresundsbron.jpg]({{site.baseurl}}/assets/images/posts/öresundsbron.jpg)
 ![sopsemester.jpg]({{site.baseurl}}/assets/images/posts/sopsemester.jpg)
 ![soldierfire.jpg]({{site.baseurl}}/assets/images/posts/soldierfire.jpg)
