--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -4,7 +4,8 @@ published: true
 title: politik
 feature: uk ut ur eu.jpg
 ---
-![image2.jpg]({{site.baseurl}}/assets/images/posts/image2.jpg)
+![image3e2.jpg]({{site.baseurl}}/assets/images/posts/image3e2.jpg)
+
 ![mina.jpg]({{site.baseurl}}/assets/images/posts/mina.jpg)
 ![trafficking (2).jpg]({{site.baseurl}}/assets/images/posts/trafficking (2).jpg)
 ![Swedish2_0.jpg]({{site.baseurl}}/assets/images/posts/Swedish2_0.jpg)
