--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -10,10 +10,6 @@ title: Anorex
 ![3.jpg]({{site.baseurl}}/assets/images/posts/3.jpg)
 ![4.jpg]({{site.baseurl}}/assets/images/posts/4.jpg)
 ![8.jpg]({{site.baseurl}}/assets/images/posts/8.jpg)
-![6.jpg]({{site.baseurl}}/asse![15.jpg]({{site.baseurl}}/assets/images/posts/15.jpg)
-ts/images/posts/6.jpg)
-![7.jpg]({{site.baseurl}![22 (2).jpg]({{site.baseurl}}/assets/images/posts/22 (2).jpg)
-}/assets/images/posts/7.jpg)
 ![9.jpg]({{site.baseurl}}/assets/images/posts/9.jpg)
 ![10.jpg]({{site.baseurl}}/assets/images/posts/10.jpg)
 ![12.jpg]({{site.baseurl}}/assets/images/posts/12.jpg)
@@ -23,9 +19,7 @@ ts/images/posts/6.jpg)
 ![17.jpg]({{site.baseurl}}/assets/images/posts/17.jpg)
 ![19.jpg]({{site.baseurl}}/assets/images/posts/19.jpg)
 ![21§.jpg]({{site.baseurl}}/assets/images/posts/21§.jpg)
-![]({{site.baseurl}}/assets/images/posts/22%20(2).jpg)
 ![22.jpg]({{site.baseurl}}/assets/images/posts/22.jpg)
 ![24.jpg]({{site.baseurl}}/assets/images/posts/24.jpg)
-![]({{site.baseurl}}/assets/images/posts/26.jpg)![26.jpg]({{site.baseurl}}/assets/images/posts/26.jpg)
+![26.jpg]({{site.baseurl}}/assets/images/posts/26.jpg)
 ![30.jpg]({{site.baseurl}}/assets/images/posts/30.jpg)
-
