--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -23,3 +23,5 @@ title: Anorex
 ![24.jpg]({{site.baseurl}}/assets/images/posts/24.jpg)
 ![26.jpg]({{site.baseurl}}/assets/images/posts/26.jpg)
 ![30.jpg]({{site.baseurl}}/assets/images/posts/30.jpg)
+![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
+![7.jpg]({{site.baseurl}}/assets/images/posts/7.jpg)
