--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -21,3 +21,6 @@ feature: uk ut ur eu.jpg
 ![flagburning.jpg]({{site.baseurl}}/assets/images/posts/flagburning.jpg)
 ![julklapp.jpg]({{site.baseurl}}/assets/images/posts/julklapp.jpg)
 ![wallstreet.jpg]({{site.baseurl}}/assets/images/posts/wallstreet.jpg)
+![9 mia.jpg]({{site.baseurl}}/assets/images/posts/9 mia.jpg)
+![26a.jpg]({{site.baseurl}}/assets/images/posts/26a.jpg)
+![55555ergxcfg.jpg]({{site.baseurl}}/assets/images/posts/55555ergxcfg.jpg)
