--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -24,3 +24,8 @@ feature: uk ut ur eu.jpg
 ![9 mia.jpg]({{site.baseurl}}/assets/images/posts/9 mia.jpg)
 ![26a.jpg]({{site.baseurl}}/assets/images/posts/26a.jpg)
 ![55555ergxcfg.jpg]({{site.baseurl}}/assets/images/posts/55555ergxcfg.jpg)
+![66678.jpg]({{site.baseurl}}/assets/images/posts/66678.jpg)
+![af2.jpg]({{site.baseurl}}/assets/images/posts/af2.jpg)
+![ajunimichiga56n011.jpg]({{site.baseurl}}/assets/images/posts/ajunimichiga56n011.jpg)
+![Batman-With-Joker-Card.jpg]({{site.baseurl}}/assets/images/posts/Batman-With-Joker-Card.jpg)
+![batra.jpg]({{site.baseurl}}/assets/images/posts/batra.jpg)
