--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -4,6 +4,7 @@ published: true
 title: politik
 feature: uk ut ur eu.jpg
 ---
+![bigbrother.jpg]({{site.baseurl}}/assets/images/posts/bigbrother.jpg)
 ![image3e2.jpg]({{site.baseurl}}/assets/images/posts/image3e2.jpg)
 ![mina.jpg]({{site.baseurl}}/assets/images/posts/mina.jpg)
 ![trafficking (2).jpg]({{site.baseurl}}/assets/images/posts/trafficking (2).jpg)
@@ -29,3 +30,19 @@ feature: uk ut ur eu.jpg
 ![ajunimichiga56n011.jpg]({{site.baseurl}}/assets/images/posts/ajunimichiga56n011.jpg)
 ![Batman-With-Joker-Card.jpg]({{site.baseurl}}/assets/images/posts/Batman-With-Joker-Card.jpg)
 ![batra.jpg]({{site.baseurl}}/assets/images/posts/batra.jpg)
+![Child figh8ter.jpg]({{site.baseurl}}/assets/images/posts/Child figh8ter.jpg)
+![city_ruins_street_hd-wallpaper-247444.jpg]({{site.baseurl}}/assets/images/posts/city_ruins_street_hd-wallpaper-247444.jpg)
+![Copy (2) of Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 
+![elviradrum.jpg]({{site.baseurl}}/assets/images/posts/elviradrum.jpg)
+![Flaggor_Sverige_2.jpg]({{site.baseurl}}/assets/images/posts/Flaggor_Sverige_2.jpg)
+![]({{site.baseurl}}/assets/images/posts/Fotolia_40899204_5te5tfweSubscription_L.jpg)![Fotolia_40899204_5te5tfweSubscription_L.jpg]({{site.baseurl}}/assets/images/posts/Fotolia_40899204_5te5tfweSubscription_L.jpg)
+![image3e2.jpg]({{site.baseurl}}/assets/images/posts/image3e2.jpg)
+![israel.jpg]({{site.baseurl}}/assets/images/posts/israel.jpg)
+![jas.jpg]({{site.baseurl}}/assets/images/posts/jas.jpg)
+![jul 2012 049 (2).jpg]({{site.baseurl}}/assets/images/posts/jul 2012 049 (2).jpg)
+![kevin.jpg]({{site.baseurl}}/assets/images/posts/kevin.jpg)
+![showFoto.jpg]({{site.baseurl}}/assets/images/posts/showFoto.jpg)
+![]({{site.baseurl}}/assets/images/posts/soldier%20red.jpg)
+![Swedish2_0 (2).jpg]({{site.baseurl}}/assets/images/posts/Swedish2_0 (2).jpg)
+![]({{site.baseurl}}/assets/images/posts/uk%20ut%20ur%20eu.jpg)
+![walking death p.jpg]({{site.baseurl}}/assets/images/posts/walking death p.jpg)
