--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,7 +4,20 @@ published: true
 title: art
 feature: bored.jpg
 ---
-
+![12.jpg]({{site.baseurl}}/assets/images/posts/12.jpg)
+![87uy1b.jpg]({{site.baseurl}}/assets/images/posts/87uy1b.jpg)
+![139.jpg]({{site.baseurl}}/assets/images/posts/139.jpg)
+![1033_extra-la777rge_1.jpg]({{site.baseurl}}/assets/images/posts/1033_extra-la777rge_1.jpg)
+![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
+![55559.jpg]({{site.baseurl}}/assets/images/posts/55559.jpg)
+![0112122998692005.jpg]({{site.baseurl}}/assets/images/posts/0112122998692005.jpg)
+![A-Winter-333weSeed4rsecret.jpg]({{site.baseurl}}/assets/images/posts/A-Winter-333weSeed4rsecret.jpg)
+![A-Winter-Secre3eddt.jpg]({{site.baseurl}}/assets/images/posts/A-Winter-Secre3eddt.jpg)
+![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
+![blå b4ebbla.jpg]({{site.baseurl}}/assets/images/posts/blå b4ebbla.jpg)
+![blå bubbla.jpg]({{site.baseurl}}/assets/images/posts/blå bubbla.jpg)
+![]({{site.baseurl}}/assets/images/posts/celebrity-freakshow-6.jpg)
+![]({{site.baseurl}}/assets/images/posts/cordis.jpg)
 ![virvel.jpg]({{site.baseurl}}/assets/images/posts/virvel.jpg)
 ![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
 ![]({{site.baseurl}}/assets/images/posts/avh%C3%A5llsamhet.jpg)![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
