--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -16,13 +16,19 @@ feature: bored.jpg
 ![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
 ![blå b4ebbla.jpg]({{site.baseurl}}/assets/images/posts/blå b4ebbla.jpg)
 ![blå bubbla.jpg]({{site.baseurl}}/assets/images/posts/blå bubbla.jpg)
+![celebrity-freakshow-6.jpg]({{site.baseurl}}/assets/images/posts/celebrity-freakshow-6.jpg)
+
 
 ![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
 ![]({{site.baseurl}}/assets/images/posts/avh%C3%A5llsamhet.jpg)![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
 ![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
 
-![demon.jpg]({{site.baseurl}}/assets/images/posts/demon.jpg)
 
+![demon.jpg]({{site.baseurl}}/assets/images/posts/demon.jpg)
+![celebrity-freakshow-6.jpg]({{site.baseurl}}/assets/images/posts/celebrity-freakshow-6.jpg)
+![cordis.jpg]({{site.baseurl}}/assets/images/posts/cordis.jpg)
+![entegrity.jpg]({{site.baseurl}}/assets/images/posts/entegrity.jpg)
+![]({{site.baseurl}}/assets/images/posts/fj%C3%A4ril.jpg)
 ![fjäril.jpg]({{site.baseurl}}/assets/images/posts/fjäril.jpg)
 ![fot.jpg]({{site.baseurl}}/assets/images/posts/fot.jpg)
 ![]({{site.baseurl}}/assets/images/posts/gamla%20tr%C3%A4d.jpg)![god.jpg]({{site.baseurl}}/assets/images/posts/god.jpg)
