--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -17,6 +17,8 @@ feature: bored.jpg
 ![blå b4ebbla.jpg]({{site.baseurl}}/assets/images/posts/blå b4ebbla.jpg)
 ![blå bubbla.jpg]({{site.baseurl}}/assets/images/posts/blå bubbla.jpg)
 ![celebrity-freakshow-6.jpg]({{site.baseurl}}/assets/images/posts/celebrity-freakshow-6.jpg)
+![cordis.jpg]({{site.baseurl}}/assets/images/posts/cordis.jpg)
+
 
 
 
