--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -18,16 +18,12 @@ feature: bored.jpg
 ![blå bubbla.jpg]({{site.baseurl}}/assets/images/posts/blå bubbla.jpg)
 ![celebrity-freakshow-6.jpg]({{site.baseurl}}/assets/images/posts/celebrity-freakshow-6.jpg)
 ![cordis.jpg]({{site.baseurl}}/assets/images/posts/cordis.jpg)
-
-
-
-
 ![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
+![]({{site.baseurl}}/assets/images/posts/demon.jpg)
 
 
 ![demon.jpg]({{site.baseurl}}/assets/images/posts/demon.jpg)
-![celebrity-freakshow-6.jpg]({{site.baseurl}}/assets/images/posts/celebrity-freakshow-6.jpg)
-![cordis.jpg]({{site.baseurl}}/assets/images/posts/cordis.jpg)
+
 ![entegrity.jpg]({{site.baseurl}}/assets/images/posts/entegrity.jpg)
 
 ![fjäril.jpg]({{site.baseurl}}/assets/images/posts/fjäril.jpg)
