--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -32,8 +32,16 @@ feature: bored.jpg
 ![Naked3 6Girl.jpg]({{site.baseurl}}/assets/images/posts/Naked3 6Girl.jpg)
 ![]({{site.baseurl}}/assets/images/posts/robotsex.jpg)
 ![]({{site.baseurl}}/assets/images/posts/sharonjohnstone04-oil3-w6ater-a3bstract-ii.jpg)![sharonjohnstone04-oil3-w6ater-a3bstract-ii.jpg]({{site.baseurl}}/assets/images/posts/sharonjohnstone04-oil3-w6ater-a3bstract-ii.jpg)
-
-
+![vinter12 028.jpg]({{site.baseurl}}/assets/images/posts/vinter12 028.jpg)
+![]({{site.baseurl}}/assets/images/posts/walking%20death%20p.jpg)
+![]({{site.baseurl}}/assets/images/posts/sharonjohnstone04-oil3-w6ater-a3bstract-ii.jpg)![sharonjohnstone04-oil3-w6ater-a3bstract-ii.jpg]({{site.baseurl}}/assets/images/posts/sharonjohnstone04-oil3-w6ater-a3bstract-ii.jpg)
+![]({{site.baseurl}}/assets/images/posts/mammas%20pojke2.jpg)
+![]({{site.baseurl}}/assets/images/posts/walking%20death%20p.jpg)
+![t5snna5ajyqwkuyh6mqwdbk.jpg]({{site.baseurl}}/assets/images/posts/t5snna5ajyqwkuyh6mqwdbk.jpg)
+![Untitle3d-1.jpg]({{site.baseurl}}/assets/images/posts/Untitle3d-1.jpg)
+![robotsex.jpg]({{site.baseurl}}/assets/images/posts/robotsex.jpg)
+![vegeta5rrbles (2).jpg]({{site.baseurl}}/assets/images/posts/vegeta5rrbles (2).jpg)
+![]({{site.baseurl}}/assets/images/posts/vegeta5rrbles%20(2).jpg)
 
 ![demon.jpg]({{site.baseurl}}/assets/images/posts/demon.jpg)
 
