--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -57,5 +57,5 @@ feature: bored.jpg
 ![robert.jpg]({{site.baseurl}}/assets/images/posts/robert.jpg)
 ![roger.jpg]({{site.baseurl}}/assets/images/posts/roger.jpg)
 ![storebror.jpg]({{site.baseurl}}/assets/images/posts/storebror.jpg)
-![]({{site.baseurl}}/assets/images/posts/soldier%20red.jpg)![]({{site.baseurl}}/assets/images/posts/t%20bana.jpg)![zombie.jpg]({{site.baseurl}}/assets/images/posts/zombie.jpg)
+![]({{site.baseurl}}/assets/images/posts/soldier%20red.jpg)![]({{site.baseurl}}/assets/images/posts/t%20bana.jpg)![zombie.jpg]
 ![twintower.jpg]({{site.baseurl}}/assets/images/posts/twintower.jpg)
