--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -42,6 +42,7 @@ feature: bored.jpg
 ![robotsex.jpg]({{site.baseurl}}/assets/images/posts/robotsex.jpg)
 ![vegeta5rrbles (2).jpg]({{site.baseurl}}/assets/images/posts/vegeta5rrbles (2).jpg)
 ![]({{site.baseurl}}/assets/images/posts/vegeta5rrbles%20(2).jpg)
+![]({{site.baseurl}}/assets/images/posts/walking%20death%20p.jpg)
 
 ![demon.jpg]({{site.baseurl}}/assets/images/posts/demon.jpg)
 
@@ -57,5 +58,5 @@ feature: bored.jpg
 ![robert.jpg]({{site.baseurl}}/assets/images/posts/robert.jpg)
 ![roger.jpg]({{site.baseurl}}/assets/images/posts/roger.jpg)
 ![storebror.jpg]({{site.baseurl}}/assets/images/posts/storebror.jpg)
-![]({{site.baseurl}}/assets/images/posts/soldier%20red.jpg)![]({{site.baseurl}}/assets/images/posts/t%20bana.jpg)![zombie.jpg]
+![]({{site.baseurl}}/assets/images/posts/soldier%20red.jpg)![]
 ![twintower.jpg]({{site.baseurl}}/assets/images/posts/twintower.jpg)
