--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -31,6 +31,8 @@ feature: bored.jpg
 ![my face 0rrt444e553.jpg]({{site.baseurl}}/assets/images/posts/my face 0rrt444e553.jpg)
 ![Naked3 6Girl.jpg]({{site.baseurl}}/assets/images/posts/Naked3 6Girl.jpg)
 ![]({{site.baseurl}}/assets/images/posts/robotsex.jpg)
+![lika44e robot.jpg]({{site.baseurl}}/assets/images/posts/lika44e robot.jpg)
+
 
 ![vinter12 028.jpg]({{site.baseurl}}/assets/images/posts/vinter12 028.jpg)
 ![]({{site.baseurl}}/assets/images/posts/walking%20death%20p.jpg)
