--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -32,6 +32,7 @@ feature: bored.jpg
 ![Naked3 6Girl.jpg]({{site.baseurl}}/assets/images/posts/Naked3 6Girl.jpg)
 ![]({{site.baseurl}}/assets/images/posts/robotsex.jpg)
 ![lika44e robot.jpg]({{site.baseurl}}/assets/images/posts/lika44e robot.jpg)
+![]({{site.baseurl}}/assets/images/posts/sharonjohnstone04-oil3-w6ater-a3bstract-ii.jpg)
 
 
 ![vinter12 028.jpg]({{site.baseurl}}/assets/images/posts/vinter12 028.jpg)
