--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -4,6 +4,7 @@ published: true
 title: politik
 feature: uk ut ur eu.jpg
 ---
+![12g.jpg]({{site.baseurl}}/assets/images/posts/12g.jpg)
 ![bigbrother.jpg]({{site.baseurl}}/assets/images/posts/bigbrother.jpg)
 ![image3e2.jpg]({{site.baseurl}}/assets/images/posts/image3e2.jpg)
 
@@ -28,8 +29,7 @@ feature: uk ut ur eu.jpg
 ![Copy (2) of Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 
 ![elviradrum.jpg]({{site.baseurl}}/assets/images/posts/elviradrum.jpg)
 ![Flaggor_Sverige_2.jpg]({{site.baseurl}}/assets/images/posts/Flaggor_Sverige_2.jpg)
-![]({{site.baseurl}}/assets/images/posts/Fotolia_40899204_5te5tfweSubscription_L.jpg)![Fotolia_40899204_5te5tfweSubscription_L.jpg]({{site.baseurl}}/assets/images/posts/Fotolia_40899204_5te5tfweSubscription_L.jpg)
-![image3e2.jpg]({{site.baseurl}}/assets/images/posts/image3e2.jpg)
+![]({{site.baseurl}}/assets/images/posts/Fotolia_40899204_5te5tfweSubscription_L.jpg)![Fotolia_40899204_5te5tfweSubscription_L.jpg]
 ![israel.jpg]({{site.baseurl}}/assets/images/posts/israel.jpg)
 ![jas.jpg]({{site.baseurl}}/assets/images/posts/jas.jpg)
 ![jul 2012 049 (2).jpg]({{site.baseurl}}/assets/images/posts/jul 2012 049 (2).jpg)
