--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -39,3 +39,4 @@ feature: uk ut ur eu.jpg
 ![Swedish2_0 (2).jpg]({{site.baseurl}}/assets/images/posts/Swedish2_0 (2).jpg)
 ![]({{site.baseurl}}/assets/images/posts/uk%20ut%20ur%20eu.jpg)
 ![walking death p.jpg]({{site.baseurl}}/assets/images/posts/walking death p.jpg)
+![Swedish6y2_0.jpg]({{site.baseurl}}/assets/images/posts/Swedish6y2_0.jpg)
