--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -5,7 +5,7 @@ published: true
 title: Anorex
 ---
 ![1.jpg]({{site.baseurl}}/assets/images/posts/1.jpg)
-
+![2erff.jpg]({{site.baseurl}}/assets/images/posts/2erff.jpg)
 ![2.jpg]({{site.baseurl}}/assets/images/posts/2.jpg)
 ![5.jpg]({{site.baseurl}}/assets/images/posts/5.jpg)
 ![3.jpg]({{site.baseurl}}/assets/images/posts/3.jpg)
