--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -5,9 +5,22 @@ title: royal
 feature: calle.jpg
 ---
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
-
-
 ![12h.jpg]({{site.baseurl}}/assets/images/posts/12h.jpg)
 ![2003390417.jpg]({{site.baseurl}}/assets/images/posts/2003390417.jpg)
 ![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
 ![]({{site.baseurl}}/assets/images/posts/avh%C3%A5llsamhet.jpg)
+![virus.jpg]({{site.baseurl}}/assets/images/posts/virus.jpg)
+![Bus-eller-godis.jpg]({{site.baseurl}}/assets/images/posts/Bus-eller-godis.jpg)
+![]({{site.baseurl}}/assets/images/posts/avh%C3%A5llsamhet.jpg)
+![IMG_443336.jpg]({{site.baseurl}}/assets/images/posts/IMG_443336.jpg)
+![maj juni 13 109.jpg]({{site.baseurl}}/assets/images/posts/maj juni 13 109.jpg)
+![m130113-076uy51x.jpg]({{site.baseurl}}/assets/images/posts/m130113-076uy51x.jpg)
+![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
+![Ray_of4_Light_6Wide.jpg]({{site.baseurl}}/assets/images/posts/Ray_of4_Light_6Wide.jpg)
+![the-m44154agi.jpg]({{site.baseurl}}/assets/images/posts/the-m44154agi.jpg)
+![tyra 8 gb3333g 14 003.jpg]({{site.baseurl}}/assets/images/posts/tyra 8 gb3333g 14 003.jpg)
+![tyra 8 gbg 14 003.jpg]({{site.baseurl}}/assets/images/posts/tyra 8 gbg 14 003.jpg)
+![rysk rolette.jpg]({{site.baseurl}}/assets/images/posts/rysk rolette.jpg)
+![tyra.jpg]({{site.baseurl}}/assets/images/posts/tyra.jpg)
+![Search-Life-Europa-Je45upite5rer-art-011614.jpg]({{site.baseurl}}/assets/images/posts/Search-Life-Europa-Je45upite5rer-art-011614.jpg)
+
