--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -23,4 +23,12 @@ feature: calle.jpg
 ![rysk rolette.jpg]({{site.baseurl}}/assets/images/posts/rysk rolette.jpg)
 ![tyra.jpg]({{site.baseurl}}/assets/images/posts/tyra.jpg)
 ![Search-Life-Europa-Je45upite5rer-art-011614.jpg]({{site.baseurl}}/assets/images/posts/Search-Life-Europa-Je45upite5rer-art-011614.jpg)
+![67098.jpg]({{site.baseurl}}/assets/images/posts/67098.jpg)
+![00665505.jpg]({{site.baseurl}}/assets/images/posts/00665505.jpg)
+![1281719080-j2na09-800x1000.jpg]({{site.baseurl}}/assets/images/posts/1281719080-j2na09-800x1000.jpg)
+![01012301101.jpg]({{site.baseurl}}/assets/images/posts/01012301101.jpg)
+![BlackWhi66te8x5130small.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te8x5130small.jpg)
+![color-wave (2).jpg]({{site.baseurl}}/assets/images/posts/color-wave (2).jpg)
+![fan 45446639501.jpg]({{site.baseurl}}/assets/images/posts/fan 45446639501.jpg)
+![flying_elements_1440x900.jpg]({{site.baseurl}}/assets/images/posts/flying_elements_1440x900.jpg)
 
