--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -31,4 +31,6 @@ feature: calle.jpg
 ![color-wave (2).jpg]({{site.baseurl}}/assets/images/posts/color-wave (2).jpg)
 ![fan 45446639501.jpg]({{site.baseurl}}/assets/images/posts/fan 45446639501.jpg)
 ![flying_elements_1440x900.jpg]({{site.baseurl}}/assets/images/posts/flying_elements_1440x900.jpg)
+![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
+![music.jpg]({{site.baseurl}}/assets/images/posts/music.jpg)
 
