--- a/_posts/2016-10-04--ngest.md
+++ b/_posts/2016-10-04--ngest.md
@@ -8,6 +8,15 @@ feature: farewell.jpg
 ![farewell.jpg]({{site.baseurl}}/assets/images/posts/farewell.jpg)
 ![ångrar.jpg]({{site.baseurl}}/assets/images/posts/ångrar.jpg)
 ![]({{site.baseurl}}/assets/images/posts/happy.jpg)![gud som....jpg]({{site.baseurl}}/assets/images/posts/gud som....jpg)
+![147343440.jpg]({{site.baseurl}}/assets/images/posts/147343440.jpg)
+![fast.jpg]({{site.baseurl}}/assets/images/posts/fast.jpg)
+![00452552035.jpg]({{site.baseurl}}/assets/images/posts/00452552035.jpg)
+![aura2_88134556280.jpg]({{site.baseurl}}/assets/images/posts/aura2_88134556280.jpg)
+![Hyperbolic_orthogonal_dodecahe8dral0_hon6eycomb.jpg]({{site.baseurl}}/assets/images/posts/Hyperbolic_orthogonal_dodecahe8dral0_hon6eycomb.jpg)
+![IMG_5011.jpg]({{site.baseurl}}/assets/images/posts/IMG_5011.jpg)
+![azjunimichigan0054.jpg]({{site.baseurl}}/assets/images/posts/azjunimichigan0054.jpg)
+
+
 
 ![atomic fix.jpg]({{site.baseurl}}/assets/images/posts/atomic fix.jpg)
 ![kaos.jpg]({{site.baseurl}}/assets/images/posts/kaos.jpg)
