--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -33,4 +33,5 @@ feature: calle.jpg
 ![flying_elements_1440x900.jpg]({{site.baseurl}}/assets/images/posts/flying_elements_1440x900.jpg)
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![music.jpg]({{site.baseurl}}/assets/images/posts/music.jpg)
+![red-sky-at-night.jpg]({{site.baseurl}}/assets/images/posts/red-sky-at-night.jpg)
 
