--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -7,14 +7,14 @@ feature: uk ut ur eu.jpg
 ![12g.jpg]({{site.baseurl}}/assets/images/posts/12g.jpg)
 ![bigbrother.jpg]({{site.baseurl}}/assets/images/posts/bigbrother.jpg)
 ![image3e2.jpg]({{site.baseurl}}/assets/images/posts/image3e2.jpg)
-
-
 ![26a.jpg]({{site.baseurl}}/assets/images/posts/26a.jpg)
 ![israel.jpg]({{site.baseurl}}/assets/images/posts/israel.jpg)
-
 ![af2.jpg]({{site.baseurl}}/assets/images/posts/af2.jpg)
-
 ![batra.jpg]({{site.baseurl}}/assets/images/posts/batra.jpg)
+![maxresdefault.jpg]({{site.baseurl}}/assets/images/posts/maxresdefault.jpg)
+![t26_RTR15Y30.jpg]({{site.baseurl}}/assets/images/posts/t26_RTR15Y30.jpg)
+
+
 
 ![9 mia.jpg]({{site.baseurl}}/assets/images/posts/9 mia.jpg)
 ![26a.jpg]({{site.baseurl}}/assets/images/posts/26a.jpg)
