--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 published: true
-title: royal
+title: something
 feature: calle.jpg
 ---
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
@@ -34,4 +34,3 @@ feature: calle.jpg
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![music.jpg]({{site.baseurl}}/assets/images/posts/music.jpg)
 ![red-sky-at-night.jpg]({{site.baseurl}}/assets/images/posts/red-sky-at-night.jpg)
-
