--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -8,7 +8,7 @@ feature: calle.jpg
 ![12h.jpg]({{site.baseurl}}/assets/images/posts/12h.jpg)
 ![2003390417.jpg]({{site.baseurl}}/assets/images/posts/2003390417.jpg)
 ![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
-![]({{site.baseurl}}/assets/images/posts/avh%C3%A5llsamhet.jpg)
+
 ![virus.jpg]({{site.baseurl}}/assets/images/posts/virus.jpg)
 ![Bus-eller-godis.jpg]({{site.baseurl}}/assets/images/posts/Bus-eller-godis.jpg)
 ![]({{site.baseurl}}/assets/images/posts/avh%C3%A5llsamhet.jpg)
@@ -23,6 +23,7 @@ feature: calle.jpg
 ![rysk rolette.jpg]({{site.baseurl}}/assets/images/posts/rysk rolette.jpg)
 ![tyra.jpg]({{site.baseurl}}/assets/images/posts/tyra.jpg)
 ![Search-Life-Europa-Je45upite5rer-art-011614.jpg]({{site.baseurl}}/assets/images/posts/Search-Life-Europa-Je45upite5rer-art-011614.jpg)
+![]({{site.baseurl}}/assets/images/posts/maj%20juni%2013%20168.jpg)
 ![67098.jpg]({{site.baseurl}}/assets/images/posts/67098.jpg)
 ![00665505.jpg]({{site.baseurl}}/assets/images/posts/00665505.jpg)
 ![1281719080-j2na09-800x1000.jpg]({{site.baseurl}}/assets/images/posts/1281719080-j2na09-800x1000.jpg)
