--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -5,7 +5,9 @@ published: true
 title: Anorex
 ---
 ![1.jpg]({{site.baseurl}}/assets/images/posts/1.jpg)
-![2erff.jpg]({{site.baseurl}}/assets/images/posts/2erff.jpg)
+![437c7e5996d094a5d41662c0d19b22cf6aee62fe.jpeg]({{site.baseurl}}/assets/images/posts/437c7e5996d094a5d41662c0d19b22cf6aee62fe.jpeg)
+
+
 ![2.jpg]({{site.baseurl}}/assets/images/posts/2.jpg)
 ![5.jpg]({{site.baseurl}}/assets/images/posts/5.jpg)
 ![3.jpg]({{site.baseurl}}/assets/images/posts/3.jpg)
