--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -5,10 +5,7 @@ published: true
 title: Anorex
 ---
 ![1.jpg]({{site.baseurl}}/assets/images/posts/1.jpg)
-
-
 ![2.jpg]({{site.baseurl}}/assets/images/posts/2.jpg)
-
 ![4.jpg]({{site.baseurl}}/assets/images/posts/4.jpg)
 ![8.jpg]({{site.baseurl}}/assets/images/posts/8.jpg)
 ![9.jpg]({{site.baseurl}}/assets/images/posts/9.jpg)
@@ -26,3 +23,5 @@ title: Anorex
 ![30.jpg]({{site.baseurl}}/assets/images/posts/30.jpg)
 ![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
 ![7.jpg]({{site.baseurl}}/assets/images/posts/7.jpg)
+![437c7e5996d094a5d41662c0d19b22cf6aee62fe.jpeg]({{site.baseurl}}/assets/images/posts/437c7e5996d094a5d41662c0d19b22cf6aee62fe.jpeg)
+
