--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -8,6 +8,8 @@ feature: calle.jpg
 ![12h.jpg]({{site.baseurl}}/assets/images/posts/12h.jpg)
 ![2003390417.jpg]({{site.baseurl}}/assets/images/posts/2003390417.jpg)
 ![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
+![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
+
 
 ![virus.jpg]({{site.baseurl}}/assets/images/posts/virus.jpg)
 ![Bus-eller-godis.jpg]({{site.baseurl}}/assets/images/posts/Bus-eller-godis.jpg)
