--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -24,4 +24,5 @@ title: Anorex
 ![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
 ![7.jpg]({{site.baseurl}}/assets/images/posts/7.jpg)
 ![437c7e5996d094a5d41662c0d19b22cf6aee62fe.jpeg]({{site.baseurl}}/assets/images/posts/437c7e5996d094a5d41662c0d19b22cf6aee62fe.jpeg)
+![febE4E sol 209 (2) - Kopia.jpg]({{site.baseurl}}/assets/images/posts/febE4E sol 209 (2) - Kopia.jpg)
 
