--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -26,4 +26,5 @@ title: Anorex
 ![437c7e5996d094a5d41662c0d19b22cf6aee62fe.jpeg]({{site.baseurl}}/assets/images/posts/437c7e5996d094a5d41662c0d19b22cf6aee62fe.jpeg)
 ![febE4E sol 209 (2) - Kopia.jpg]({{site.baseurl}}/assets/images/posts/febE4E sol 209 (2) - Kopia.jpg)
 ![4b-Recovered.jpg]({{site.baseurl}}/assets/images/posts/4b-Recovered.jpg)
+![marsba5tgfrn5tre 004.jpg]({{site.baseurl}}/assets/images/posts/marsba5tgfrn5tre 004.jpg)
 
