--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -7,3 +7,5 @@ title: Anorex
 ![1.jpg]({{site.baseurl}}/assets/images/posts/1.jpg)
 ![2.jpg]({{site.baseurl}}/assets/images/posts/2.jpg)
 ![4.jpg]({{site.baseurl}}/assets/images/posts/4.jpg)
+![3.jpg]({{site.baseurl}}/assets/images/posts/3.jpg)
+
