--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -8,4 +8,13 @@ title: Anorex
 ![2.jpg]({{site.baseurl}}/assets/images/posts/2.jpg)
 ![4.jpg]({{site.baseurl}}/assets/images/posts/4.jpg)
 ![3.jpg]({{site.baseurl}}/assets/images/posts/3.jpg)
+![4b.jpg]({{site.baseurl}}/assets/images/posts/4b.jpg)
+![anoxi.jpg]({{site.baseurl}}/assets/images/posts/anoxi.jpg)
+![anox.jpg]({{site.baseurl}}/assets/images/posts/anox.jpg)
+![anorexia.jpg]({{site.baseurl}}/assets/images/posts/anorexia.jpg)
+![anorex.jpg]({{site.baseurl}}/assets/images/posts/anorex.jpg)
+![andorex.jpg]({{site.baseurl}}/assets/images/posts/andorex.jpg)
+![anderax.jpg]({{site.baseurl}}/assets/images/posts/anderax.jpg)
+![andirekt.jpg]({{site.baseurl}}/assets/images/posts/andirekt.jpg)
+![an.jpg]({{site.baseurl}}/assets/images/posts/an.jpg)
 
