--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -8,6 +8,8 @@ title: Anorex
 ![2.jpg]({{site.baseurl}}/assets/images/posts/2.jpg)
 ![4.jpg]({{site.baseurl}}/assets/images/posts/4.jpg)
 ![3.jpg]({{site.baseurl}}/assets/images/posts/3.jpg)
+![anoxi.jpg]({{site.baseurl}}/assets/images/posts/anoxi.jpg)
+
 
 
 ![anox.jpg]({{site.baseurl}}/assets/images/posts/anox.jpg)
