--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -4,6 +4,7 @@ feature: 1.jpg
 published: true
 title: Anorex
 ---
+![digital_art_texture3eqa_122_by44ew_mercurycode-d7cimke.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture3eqa_122_by44ew_mercurycode-d7cimke.jpg)
 ![1.jpg]({{site.baseurl}}/assets/images/posts/1.jpg)
 ![2.jpg]({{site.baseurl}}/assets/images/posts/2.jpg)
 
@@ -19,4 +20,3 @@ title: Anorex
 ![anderax.jpg]({{site.baseurl}}/assets/images/posts/anderax.jpg)
 ![andirekt.jpg]({{site.baseurl}}/assets/images/posts/andirekt.jpg)
 ![an.jpg]({{site.baseurl}}/assets/images/posts/an.jpg)
-
