--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -20,3 +20,5 @@ title: Anorex
 ![anderax.jpg]({{site.baseurl}}/assets/images/posts/anderax.jpg)
 ![andirekt.jpg]({{site.baseurl}}/assets/images/posts/andirekt.jpg)
 ![an.jpg]({{site.baseurl}}/assets/images/posts/an.jpg)
+![digital_art_texture_13ww22_33aby4w_mercurycode-d7cimke.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_13ww22_33aby4w_mercurycode-d7cimke.jpg)
+
