--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -11,6 +11,8 @@ title: Anorex
 
 
 ![anoxi.jpg]({{site.baseurl}}/assets/images/posts/anoxi.jpg)
+![digital_art_texture44re_1ew3ws26tf96ttt_4rsby_mercurycode-d7dvn4h.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture44re_1ew3ws26tf96ttt_4rsby_mercurycode-d7dvn4h.jpg)
+
 
 
 
