--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -24,6 +24,8 @@ title: Anorex
 ![andirekt.jpg]({{site.baseurl}}/assets/images/posts/andirekt.jpg)
 ![an.jpg]({{site.baseurl}}/assets/images/posts/an.jpg)
 ![digital_art_texture_13ww22_33aby4w_mercurycode-d7cimke.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_13ww22_33aby4w_mercurycode-d7cimke.jpg)
+![digital_art_texture44re_126tf96ttt_by_mercurycode-d7dvn4h.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture44re_126tf96ttt_by_mercurycode-d7dvn4h.jpg)
+
 
 
 
