--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -8,11 +8,10 @@ title: Anorex
 ![1.jpg]({{site.baseurl}}/assets/images/posts/1.jpg)
 ![2.jpg]({{site.baseurl}}/assets/images/posts/2.jpg)
 ![digital_art_texture44re_1ew3ws26tf96ttt_4rsby_mercurycode-d7dvn4h.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture44re_1ew3ws26tf96ttt_4rsby_mercurycode-d7dvn4h.jpg)
-
-
-
-
 ![anoxi.jpg]({{site.baseurl}}/assets/images/posts/anoxi.jpg)
+![brun.jpg]({{site.baseurl}}/assets/images/posts/brun.jpg)
+![karta.jpg]({{site.baseurl}}/assets/images/posts/karta.jpg)
+
 
 ![anorexia.jpg]({{site.baseurl}}/assets/images/posts/anorexia.jpg)
 ![anorex.jpg]({{site.baseurl}}/assets/images/posts/anorex.jpg)
