--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -11,6 +11,8 @@ title: Anorex
 ![anoxi.jpg]({{site.baseurl}}/assets/images/posts/anoxi.jpg)
 ![brun.jpg]({{site.baseurl}}/assets/images/posts/brun.jpg)
 ![karta.jpg]({{site.baseurl}}/assets/images/posts/karta.jpg)
+![dju.jpg]({{site.baseurl}}/assets/images/posts/dju.jpg)
+
 
 
 ![anorexia.jpg]({{site.baseurl}}/assets/images/posts/anorexia.jpg)
@@ -24,6 +26,3 @@ title: Anorex
 ![digital_art_texture_13ww22_33aby4w_mercurycode-d7cimke.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_13ww22_33aby4w_mercurycode-d7cimke.jpg)
 ![kartalös.jpg]({{site.baseurl}}/assets/images/posts/kartalös.jpg)
 ![stålös.jpg]({{site.baseurl}}/assets/images/posts/stålös.jpg)
-
-
-
