--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -26,3 +26,5 @@ title: Anorex
 ![digital_art_texture_13ww22_33aby4w_mercurycode-d7cimke.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_13ww22_33aby4w_mercurycode-d7cimke.jpg)
 ![kartalös.jpg]({{site.baseurl}}/assets/images/posts/kartalös.jpg)
 ![stålös.jpg]({{site.baseurl}}/assets/images/posts/stålös.jpg)
+![djupety.jpg]({{site.baseurl}}/assets/images/posts/djupety.jpg)
+
