--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -12,6 +12,8 @@ title: Anorex
 ![brun.jpg]({{site.baseurl}}/assets/images/posts/brun.jpg)
 ![karta.jpg]({{site.baseurl}}/assets/images/posts/karta.jpg)
 ![dju.jpg]({{site.baseurl}}/assets/images/posts/dju.jpg)
+![elefant.jpg]({{site.baseurl}}/assets/images/posts/elefant.jpg)
+
 
 
 
