--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -29,4 +29,6 @@ title: Anorex
 ![kartalös.jpg]({{site.baseurl}}/assets/images/posts/kartalös.jpg)
 ![stålös.jpg]({{site.baseurl}}/assets/images/posts/stålös.jpg)
 ![djupety.jpg]({{site.baseurl}}/assets/images/posts/djupety.jpg)
+![elelös.jpg]({{site.baseurl}}/assets/images/posts/elelös.jpg)
+
 
