--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -10,13 +10,7 @@ feature: calle.jpg
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
 
 
-![virus.jpg]({{site.baseurl}}/assets/images/posts/virus.jpg)
-![Bus-eller-godis.jpg]({{site.baseurl}}/assets/images/posts/Bus-eller-godis.jpg)
-
-![IMG_443336.jpg]({{site.baseurl}}/assets/images/posts/IMG_443336.jpg)
-![maj juni 13 109.jpg]({{site.baseurl}}/assets/images/posts/maj juni 13 109.jpg)
-![m130113-076uy51x.jpg]({{site.baseurl}}/assets/images/posts/m130113-076uy51x.jpg)
-![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
+[paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
 ![Ray_of4_Light_6Wide.jpg]({{site.baseurl}}/assets/images/posts/Ray_of4_Light_6Wide.jpg)
 ![the-m44154agi.jpg]({{site.baseurl}}/assets/images/posts/the-m44154agi.jpg)
 ![tyra 8 gb3333g 14 003.jpg]({{site.baseurl}}/assets/images/posts/tyra 8 gb3333g 14 003.jpg)
