--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -10,7 +10,7 @@ feature: calle.jpg
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
 
 
-[paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
+({{site.baseurl}}/assets/images/posts/paranoja.jpg)
 
 ![rysk rolette.jpg]({{site.baseurl}}/assets/images/posts/rysk rolette.jpg)
 
