--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 published: true
-title: something
+title: fidelis ad mortem
 feature: calle.jpg
 ---
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
