--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -5,6 +5,8 @@ title: fidelis ad mortem
 feature: calle.jpg
 ---
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
+![tumblr_o6tko833ee1otc1u7k3jlo1_1280.jpg]({{site.baseurl}}/assets/images/posts/tumblr_o6tko833ee1otc1u7k3jlo1_1280.jpg)
+
 
 ![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
