--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -5,6 +5,8 @@ title: fidelis ad mortem
 feature: calle.jpg
 ---
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
+![sjö.jpg]({{site.baseurl}}/assets/images/posts/sjö.jpg)
+
 
 
 ![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
