--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -6,6 +6,8 @@ feature: calle.jpg
 ---
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
 ![sjö.jpg]({{site.baseurl}}/assets/images/posts/sjö.jpg)
+![18a - Kopia.jpg]({{site.baseurl}}/assets/images/posts/18a - Kopia.jpg)
+
 
 
 
