--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -7,20 +7,15 @@ feature: calle.jpg
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
 ![sjö.jpg]({{site.baseurl}}/assets/images/posts/sjö.jpg)
 ![18a - Kopia.jpg]({{site.baseurl}}/assets/images/posts/18a - Kopia.jpg)
-![139.jpg]({{site.baseurl}}/assets/images/posts/139.jpg)
+![139.jpg]({{site.baseurl}}/assets/images/posts/1![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
 
-
-
-
-
-![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
 
 
 
 ![rysk rolette.jpg]({{site.baseurl}}/assets/images/posts/rysk rolette.jpg)
 
-![00665505.jpg]({{site.baseurl}}/assets/images/posts/00665505.jpg)
+
 ![1281719080-j2na09-800x1000.jpg]({{site.baseurl}}/assets/images/posts/1281719080-j2na09-800x1000.jpg)
 
 ![flying_elements_1440x900.jpg]({{site.baseurl}}/assets/images/posts/flying_elements_1440x900.jpg)
