--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -14,6 +14,8 @@ feature: calle.jpg
 
 
 ![rysk rolette.jpg]({{site.baseurl}}/assets/images/posts/rysk rolette.jpg)
+![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
+
 
 
 ![1281719080-j2na09-800x1000.jpg]({{site.baseurl}}/assets/images/posts/1281719080-j2na09-800x1000.jpg)
