--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -8,6 +8,8 @@ feature: calle.jpg
 ![sjö.jpg]({{site.baseurl}}/assets/images/posts/sjö.jpg)
 ![18a - Kopia.jpg]({{site.baseurl}}/assets/images/posts/18a - Kopia.jpg)
 ![139.jpg]({{site.baseurl}}/assets/images/posts/1![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
+![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
+
 
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
 
