--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -9,6 +9,7 @@ feature: calle.jpg
 ![18a - Kopia.jpg]({{site.baseurl}}/assets/images/posts/18a - Kopia.jpg)
 ![139.jpg]({{site.baseurl}}/assets/images/posts/1![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
 ![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
+![Church_of_488Light.jpg]({{site.baseurl}}/assets/images/posts/Church_of_488Light.jpg)
 
 
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
