--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -10,6 +10,8 @@ feature: calle.jpg
 ![139.jpg]({{site.baseurl}}/assets/images/posts/1![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
 ![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
 ![Church_of_488Light.jpg]({{site.baseurl}}/assets/images/posts/Church_of_488Light.jpg)
+![graatartndepojkar.jpg]({{site.baseurl}}/assets/images/posts/graatartndepojkar.jpg)
+
 
 
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
