--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -11,6 +11,7 @@ feature: calle.jpg
 ![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
 ![Church_of_488Light.jpg]({{site.baseurl}}/assets/images/posts/Church_of_488Light.jpg)
 ![graatartndepojkar.jpg]({{site.baseurl}}/assets/images/posts/graatartndepojkar.jpg)
+![gray-lt-brown.jpg]({{site.baseurl}}/assets/images/posts/gray-lt-brown.jpg)
 
 
 
