--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -12,6 +12,7 @@ feature: calle.jpg
 ![Church_of_488Light.jpg]({{site.baseurl}}/assets/images/posts/Church_of_488Light.jpg)
 ![graatartndepojkar.jpg]({{site.baseurl}}/assets/images/posts/graatartndepojkar.jpg)
 ![gray-lt-brown.jpg]({{site.baseurl}}/assets/images/posts/gray-lt-brown.jpg)
+![hopp.jpg]({{site.baseurl}}/assets/images/posts/hopp.jpg)
 
 
 
