--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -13,6 +13,8 @@ feature: calle.jpg
 ![graatartndepojkar.jpg]({{site.baseurl}}/assets/images/posts/graatartndepojkar.jpg)
 ![gray-lt-brown.jpg]({{site.baseurl}}/assets/images/posts/gray-lt-brown.jpg)
 ![hopp.jpg]({{site.baseurl}}/assets/images/posts/hopp.jpg)
+![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
+
 
 
 
