--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -14,6 +14,8 @@ feature: calle.jpg
 ![gray-lt-brown.jpg]({{site.baseurl}}/assets/images/posts/gray-lt-brown.jpg)
 ![hopp.jpg]({{site.baseurl}}/assets/images/posts/hopp.jpg)
 ![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
+![zombie.jpg]({{site.baseurl}}/assets/images/posts/zombie.jpg)
+
 
 
 
