--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -13,7 +13,7 @@ title: Anorex
 ![karta.jpg]({{site.baseurl}}/assets/images/posts/karta.jpg)
 ![dju.jpg]({{site.baseurl}}/assets/images/posts/dju.jpg)
 ![elefant.jpg]({{site.baseurl}}/assets/images/posts/elefant.jpg)
-![digital_art_texture_80_b4qwqy_mercury3eewcode-d73nhfs.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_80_b4qwqy_mercury3eewcode-d73nhfs.jpg)
+]({{site.baseurl}}/assets/images/posts/digital_art_texture_80_b4qwqy_mercury3eewcode-d73nhfs.jpg)
 
 
 
