--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -31,3 +31,5 @@ title: Anorex
 ![kartalös.jpg]({{site.baseurl}}/assets/images/posts/kartalös.jpg)
 ![stålös.jpg]({{site.baseurl}}/assets/images/posts/stålös.jpg)
 ![djupety.jpg]({{site.baseurl}}/assets/images/posts/djupety.jpg)
+![digital_art_texture_256sd_by_mercurycode-d8f6u6n.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_256sd_by_mercurycode-d8f6u6n.jpg)
+
