--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -14,6 +14,8 @@ title: Anorex
 ![dju.jpg]({{site.baseurl}}/assets/images/posts/dju.jpg)
 ![elefant.jpg]({{site.baseurl}}/assets/images/posts/elefant.jpg)
 ![digital_art_texture_80_b4qwqy_mercury3eewcode-d73nhfs.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_80_b4qwqy_mercury3eewcode-d73nhfs.jpg)
+![7artyelllow.jpg]({{site.baseurl}}/assets/images/posts/7artyelllow.jpg)
+
 
 
 
@@ -32,4 +34,6 @@ title: Anorex
 ![stålös.jpg]({{site.baseurl}}/assets/images/posts/stålös.jpg)
 ![djupety.jpg]({{site.baseurl}}/assets/images/posts/djupety.jpg)
 ![digital_art_texture_256sd_by_mercurycode-d8f6u6n.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_256sd_by_mercurycode-d8f6u6n.jpg)
+![svdart.jpg]({{site.baseurl}}/assets/images/posts/svdart.jpg)
+
 
