--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -13,6 +13,8 @@ feature: uk ut ur eu.jpg
 ![batra.jpg]({{site.baseurl}}/assets/images/posts/batra.jpg)
 ![maxresdefault.jpg]({{site.baseurl}}/assets/images/posts/maxresdefault.jpg)
 ![t26_RTR15Y30.jpg]({{site.baseurl}}/assets/images/posts/t26_RTR15Y30.jpg)
+![water-drop-wt.jpg]({{site.baseurl}}/assets/images/posts/water-drop-wt.jpg)
+
 
 
 
