--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -2,7 +2,7 @@
 layout: post
 published: true
 title: DREAM
-feature: DRAKE
+feature: '![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)'
 ---
 ## A New Post
 
