--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -7,3 +7,5 @@ feature: '![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)'
 
 
 ![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)
+![ÖKEN.jpg]({{site.baseurl}}/assets/images/posts/ÖKEN.jpg)
+
