--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -9,4 +9,5 @@ feature: '![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)'
 ![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)
 ![ÖKEN.jpg]({{site.baseurl}}/assets/images/posts/ÖKEN.jpg)
 ![rum.jpg]({{site.baseurl}}/assets/images/posts/rum.jpg)
+![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
 
