--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -10,4 +10,5 @@ feature: '![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)'
 ![ÖKEN.jpg]({{site.baseurl}}/assets/images/posts/ÖKEN.jpg)
 ![rum.jpg]({{site.baseurl}}/assets/images/posts/rum.jpg)
 ![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
+![ökökensam1.jpg]({{site.baseurl}}/assets/images/posts/ökökensam1.jpg)
 
