--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -12,4 +12,5 @@ feature: '![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)'
 ![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
 ![ökökensam1.jpg]({{site.baseurl}}/assets/images/posts/ökökensam1.jpg)
 ![ökendragon.jpg]({{site.baseurl}}/assets/images/posts/ökendragon.jpg)
+![öpass.jpg]({{site.baseurl}}/assets/images/posts/öpass.jpg)
 
