--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -12,6 +12,7 @@ feature: '![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)'
 ![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
 ![ökökensam1.jpg]({{site.baseurl}}/assets/images/posts/ökökensam1.jpg)
 ![for sale.jpg]({{site.baseurl}}/assets/images/posts/for sale.jpg)
+![digital_art_texture_256_by_mercurycode-d8f6u6n.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_256_by_mercurycode-d8f6u6n.jpg)
 
 ![ökendragon.jpg]({{site.baseurl}}/assets/images/posts/ökendragon.jpg)
 ![öpass.jpg]({{site.baseurl}}/assets/images/posts/öpass.jpg)
