--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -17,6 +17,4 @@ feature: '![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)'
 
 
 ![ökendragon.jpg]({{site.baseurl}}/assets/images/posts/ökendragon.jpg)
-![öpass.jpg]({{site.baseurl}}/assets/images/posts/öpass.jpg)
-![digital_art_texture_256_by_mercurycode-d8f6u6n.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_256_by_mercurycode-d8f6u6n.jpg)
-
+]({{site.baseurl}}/assets/images/posts/digital_art_texture_256_by_mercurycode-d8f6u6n.jpg)
