--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -11,6 +11,8 @@ feature: '![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)'
 ![rum.jpg]({{site.baseurl}}/assets/images/posts/rum.jpg)
 ![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
 ![ökökensam1.jpg]({{site.baseurl}}/assets/images/posts/ökökensam1.jpg)
+![tsunami.jpg]({{site.baseurl}}/assets/images/posts/tsunami.jpg)
+
 
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
 
