--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -11,7 +11,7 @@ feature: tsunami.jpg
 ![rum.jpg]({{site.baseurl}}/assets/images/posts/rum.jpg)
 ![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
 ![ökökensam1.jpg]({{site.baseurl}}/assets/images/posts/ökökensam1.jpg)
-![tsunami.jpg]({{site.baseurl}}/assets/images/posts/tsunami.jpg)
+![tsunamo.jpg]({{site.baseurl}}/assets/images/posts/tsunamo.jpg)
 
 
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
