--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -7,6 +7,8 @@ feature: bored.jpg
 
 
 ![139.jpg]({{site.baseurl}}/assets/images/posts/139.jpg)
+![shutterstock_119178862-1 (2).jpg]({{site.baseurl}}/assets/images/posts/shutterstock_119178862-1 (2).jpg)
+
 
 ![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
 ![55559.jpg]({{site.baseurl}}/assets/images/posts/55559.jpg)
