--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -15,3 +15,5 @@ feature: tsunami.jpg
 
 
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
+![ghost.jpg]({{site.baseurl}}/assets/images/posts/ghost.jpg)
+
