--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -11,6 +11,8 @@ feature: tsunami.jpg
 ![rum.jpg]({{site.baseurl}}/assets/images/posts/rum.jpg)
 ![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
 ![ökökensam1.jpg]({{site.baseurl}}/assets/images/posts/ökökensam1.jpg)
+![nucleardrem.jpg]({{site.baseurl}}/assets/images/posts/nucleardrem.jpg)
+
 
 
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
