--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -5,6 +5,8 @@ title: fidelis ad mortem
 feature: calle.jpg
 ---
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
+![midsommar 1184 32439.jpg]({{site.baseurl}}/assets/images/posts/midsommar 1184 32439.jpg)
+
 
 ![139.jpg]({{site.baseurl}}/assets/images/posts/1![alt6are.jpg]({{site.baseurl}}/assets/images/posts/alt6are.jpg)
 ![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
