--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -7,7 +7,8 @@ feature: calle.jpg
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
 ![midsommar 1184 32439.jpg]({{site.baseurl}}/assets/images/posts/midsommar 1184 32439.jpg)
 ![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
-![Copy (2) of frakm5_1502234x768.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) of 
+![Copy (2) of frakm5_1502234x768.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 
+
 
 
 
