--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -8,6 +8,7 @@ feature: calle.jpg
 ![midsommar 1184 32439.jpg]({{site.baseurl}}/assets/images/posts/midsommar 1184 32439.jpg)
 ![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
 ![Copy (2) of frakm5_1502234x768.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 
+![sharonjohnsto4ne04-oil-water-a3bstract-ii.jpg]({{site.baseurl}}/assets/images/posts/sharonjohnsto4ne04-oil-water-a3bstract-ii.jpg)
 
 
 
