--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -10,9 +10,7 @@ feature: calle.jpg
 ![Copy (2) of frakm5_1502234x768.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 
 ![sharonjohnsto4ne04-oil-water-a3bstract-ii.jpg]({{site.baseurl}}/assets/images/posts/sharonjohnsto4ne04-oil-water-a3bstract-ii.jpg)
 ![BlackWhi66te68x5199077small copy.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te68x5199077small copy.jpg)
-
-
-
+![Copy (2) of frakt2393al2.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) of frakt2393al2.jpg)
 
 
 
