--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -11,7 +11,7 @@ feature: calle.jpg
 ![sharonjohnsto4ne04-oil-water-a3bstract-ii.jpg]({{site.baseurl}}/assets/images/posts/sharonjohnsto4ne04-oil-water-a3bstract-ii.jpg)
 ![BlackWhi66te68x5199077small copy.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te68x5199077small copy.jpg)
 ![Copy (2) of frakt2393al2.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 
-![Copy (2) of 37d77d26126baf03a1_large.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) of 
+![Copy (2) of 37d77d26126baf03a1_large.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 
 
 
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
