--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -13,6 +13,8 @@ feature: calle.jpg
 ![Copy (2) of frakt2393al2.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 
 ![Copy (2) of 37d77d26126baf03a1_large.jpg]({{site.baseurl}}/assets/images/posts/Copy (2)
 ![IMG_44536.jpg]({{site.baseurl}}/assets/images/posts/IMG_44536.jpg)
+![maple-in-autumn-1920x1080-wallpaper-3470.jpg]({{site.baseurl}}/assets/images/posts/maple-in-autumn-1920x1080-wallpaper-3470.jpg)
+
 
 
 
