--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -15,6 +15,7 @@ feature: calle.jpg
 ![IMG_44536.jpg]({{site.baseurl}}/assets/images/posts/IMG_44536.jpg)
 ![maple-in-autumn-1920x1080-wallpaper-3470.jpg]({{site.baseurl}}/assets/images/posts/maple-in-autumn-1920x1080-wallpaper-3470.jpg)
 ![music.jpg]({{site.baseurl}}/assets/images/posts/music.jpg)
+![Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy of Ray_o42f_Light54567669_Wide.jpg)
 
 
 
