--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -18,10 +18,7 @@ feature: calle.jpg
 ![Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy of Ray_o42f_Light54567669_Wide.jpg)
 ![Naked3 6Girl (2).jpg]({{site.baseurl}}/assets/images/posts/Naked3 6Girl (2).jpg)
 ![my face 0553 (2).jpg]({{site.baseurl}}/assets/images/posts/my face 0553 (2).jpg)
-
-
-
-
+![robotsex.jpg]({{site.baseurl}}/assets/images/posts/robotsex.jpg)
 
 
 
