--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -20,6 +20,8 @@ feature: calle.jpg
 ![my face 0553 (2).jpg]({{site.baseurl}}/assets/images/posts/my face 0553 (2).jpg)
 ![robotsex.jpg]({{site.baseurl}}/assets/images/posts/robotsex.jpg)
 ![the-m444a4gi (2).jpg]({{site.baseurl}}/assets/images/posts/the-m444a4gi (2).jpg)
+![virvel.jpg]({{site.baseurl}}/assets/images/posts/virvel.jpg)
+
 
 
 
