--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -23,5 +23,6 @@ feature: calle.jpg
 ![virvel.jpg]({{site.baseurl}}/assets/images/posts/virvel.jpg)
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
 ![rysk rolette.jpg]({{site.baseurl}}/assets/images/posts/rysk rolette.jpg)
+![4r4etr45terfgr.jpg]({{site.baseurl}}/assets/images/posts/4r4etr45terfgr.jpg)
 
 
