--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -24,5 +24,7 @@ feature: calle.jpg
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
 ![rysk rolette.jpg]({{site.baseurl}}/assets/images/posts/rysk rolette.jpg)
 ![4r4etr45terfgr.jpg]({{site.baseurl}}/assets/images/posts/4r4etr45terfgr.jpg)
+![Copy (2) of Copy of version-c7e8c55c6d55cdeb0be10a5d63c51ed420fb.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) of Copy of version-c7e8c55c6d55cdeb0be10a5d63c51ed420fb.jpg)
+
 
 
