--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -24,3 +24,4 @@ feature: calle.jpg
 ![hiab.jpg]({{site.baseurl}}/assets/images/posts/hiab.jpg)
 ![rysk rolette.jpg]({{site.baseurl}}/assets/images/posts/rysk rolette.jpg)
 ![4r4etr45terfgr.jpg]({{site.baseurl}}/assets/images/posts/4r4etr45terfgr.jpg)
+![82508818_8.jpg]({{site.baseurl}}/assets/images/posts/82508818_8.jpg)
