--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -26,3 +26,5 @@ feature: calle.jpg
 ![4r4etr45terfgr.jpg]({{site.baseurl}}/assets/images/posts/4r4etr45terfgr.jpg)
 ![82508818_8.jpg]({{site.baseurl}}/assets/images/posts/82508818_8.jpg)
 ![winter.jpg]({{site.baseurl}}/assets/images/posts/winter.jpg)
+![sue-enni7yhgs-art-b87ulue_big.jpg]({{site.baseurl}}/assets/images/posts/sue-enni7yhgs-art-b87ulue_big.jpg)
+
