--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -27,4 +27,6 @@ feature: calle.jpg
 ![82508818_8.jpg]({{site.baseurl}}/assets/images/posts/82508818_8.jpg)
 ![winter.jpg]({{site.baseurl}}/assets/images/posts/winter.jpg)
 ![sue-enni7yhgs-art-b87ulue_big.jpg]({{site.baseurl}}/assets/images/posts/sue-enni7yhgs-art-b87ulue_big.jpg)
+![tsunamo.jpg]({{site.baseurl}}/assets/images/posts/tsunamo.jpg)
+
 
